k8s/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: app
  template:
    metadata:
      labels:
        io.kompose.service: app
    spec:
      containers:
        - image: devopsmaret/laravel-app:v1
          name: app
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
