k8s/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: app
  type: LoadBalancer
