k8s/app/app-ingress-ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - app.kelasdevops.xyz
      secretName: app-tls
  rules:
    - host: app.kelasdevops.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app
                port:
                  number: 80
